--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,8 @@ Build and Deploy:
     - chmod 644 ~/.ssh/known_hosts
     - chmod +x ./gradlew
     - ./gradlew bootJar
-    - ls
-    - cp build/libs/IotDigitalTwin-0.0.1-SNAPSHOT.jar .
+    - ls build/libs
+    - cp build/libs/IoTDigitalTwin-0.0.1-SNAPSHOT.jar .
 
     - scp -o StrictHostKeyChecking=no  IotDigitalTwin-0.0.1-SNAPSHOT.jar ubuntu@$EC2_IPADDRESSAUTH:/home/ubuntu/Autenticazione/IoTDigitalTwin/build/libs
     - scp -o StrictHostKeyChecking=no docker-compose.yml ubuntu@$EC2_IPADDRESSAUTH:/home/ubuntu/Autenticazione/IoTDigitalTwin
