--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,6 @@ Build and Deploy:
     - ls build/libs
     - cp build/libs/IoTDigitalTwin-0.0.1-SNAPSHOT.jar .
 
-    - scp -o StrictHostKeyChecking=no  IotDigitalTwin-0.0.1-SNAPSHOT.jar ubuntu@$EC2_IPADDRESSAUTH:/home/ubuntu/Autenticazione/IoTDigitalTwin/build/libs
+    - scp -o StrictHostKeyChecking=no  IoTDigitalTwin-0.0.1-SNAPSHOT.jar ubuntu@$EC2_IPADDRESSAUTH:/home/ubuntu/Autenticazione/IoTDigitalTwin/build/libs
     - scp -o StrictHostKeyChecking=no docker-compose.yml ubuntu@$EC2_IPADDRESSAUTH:/home/ubuntu/Autenticazione/IoTDigitalTwin
     - ssh -o StrictHostKeyChecking=no ubuntu@$EC2_IPADDRESSAUTH "cd /home/ubuntu/Autenticazione/IoTDigitalTwin; sudo docker stop mysbaimage; sudo docker stop mongodbimage; sudo docker compose up"
