--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,4 +20,4 @@ Build and Deploy:
 
     - scp -o StrictHostKeyChecking=no  IoTDigitalTwin-0.0.1-SNAPSHOT.jar ubuntu@$EC2_IPADDRESSAUTH:/home/ubuntu/Autenticazione/IoTDigitalTwin/build/libs
     - scp -o StrictHostKeyChecking=no docker-compose.yml ubuntu@$EC2_IPADDRESSAUTH:/home/ubuntu/Autenticazione/IoTDigitalTwin
-    - ssh -o StrictHostKeyChecking=no ubuntu@$EC2_IPADDRESSAUTH "cd /home/ubuntu/Autenticazione/IoTDigitalTwin; sudo docker stop mysbaimage; sudo docker stop mongodbimage; sudo docker compose up"
+    - ssh -o StrictHostKeyChecking=no ubuntu@$EC2_IPADDRESSAUTH "cd /home/ubuntu/Autenticazione/IoTDigitalTwin; sudo docker stop mysbaimage-iot-auth; sudo docker stop mongodbimage-iot-auth; sudo docker compose up"
